--- a/aboutCSS.css
+++ b/aboutCSS.css
@@ -4,13 +4,6 @@ body, html {
     color:#454545;
 }
 
-/* .center {
-    margin: auto;
-    width: 60%;
-    border: 3px solid #73AD21;
-    padding: 30px 50px;
-} */
-
 .parallax {
     /* The image used */
     background-image: url('pic/mybabe.jpg');
@@ -19,7 +12,7 @@ body, html {
 	opacity: 0.5;
 	
     /* Full height */
-    height: 100%; 
+    height: 100%;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -49,6 +42,13 @@ div .row img{
 .img-description {
     font-size: 10px;
     font-family: cursive;
+}
+
+.center-content {
+    margin: 20px;
+    padding: 200px 160px;
+    text-align: center;
+    font-family: fantasy;
 }
 
 .parallax1 {
@@ -117,9 +117,6 @@ div .row img{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-	text-align: left;
-  	position: relative;
-  	font-family: Chalkduster;
-  	font-size: 20px;
-  	color: #676767;
+    color: #ffffff;
+    font-size: 20px;
 }
